--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,13 @@
     <link rel="stylesheet" href="/base.css">
     <link rel="stylesheet" href="/chat.css">
     <style>
+      .message-wrapper {
+        font-size: 8rem;
+        line-height: 8rem;
+      }
       body {
-        font-size: 40px;
+        font-size: 3rem;
+        line-height: 3rem;
       }
     </style>
   </head>
