Update title of the project

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0" />
-    <title>jQuery Feathers Chat</title>
+    <title>AI-Curator</title>
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="/base.css">
     <link rel="stylesheet" href="/chat.css">
